cleaned up index.html and moved footer inside the container tag to correctly align with the about me header.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -100,6 +100,7 @@ body {
   padding-bottom: 30px;
   color: #777;
   border-top: 1px solid #e5e5e5;
+  width: 1140px;
 }
 
 button {
